# ranged

./: .gitignore  meson.build
include/: ranged.h
tests/: globals.h  meson.build  test.cpp
